Исправлен и оптимизирован спрайт секции

--- a/css/footer.css
+++ b/css/footer.css
@@ -284,7 +284,7 @@
             color: #141414; }
           .footer_info__section_tel_mail_block a {
             width: 100%;
-            font: 13ox/20px Verdana;
+            font: 13px/20px Verdana;
             font-weight: bold;
             font-style: italic;
             text-decoration: underline;
