--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -354,7 +354,7 @@
           }
           a {
             width: 100%;
-            font: 13ox/20px Verdana;
+            font: 13px/20px Verdana;
             font-weight: bold;
             font-style: italic;
             text-decoration: underline;
