--- a/css/monufactur.css
+++ b/css/monufactur.css
@@ -145,12 +145,12 @@
         display: inline-block;
         width: 331px;
         height: 233px;
-        background: url("../img/sprite_section.png") -1833px -183px; }
+        background: url("../img/sprite_section.png") -1118px -190px; }
       .aux_img .img .bg-aux2 {
         display: inline-block;
         width: 331px;
         height: 233px;
-        background: url("../img/sprite_section.png") -2164px -183px; }
+        background: url("../img/sprite_section.png") -1460px -190px; }
       @media (max-width: 398px) {
         .aux_img .img {
           width: 100%;
@@ -210,12 +210,12 @@
         display: inline-block;
         width: 332px;
         height: 179px;
-        background: url("../img/sprite_section.png") -2166px -416px; }
+        background: url("../img/sprite_section.png") -1118px -429px; }
       .chigo_img .img .bg-chigo2 {
         display: inline-block;
         width: 333px;
         height: 179px;
-        background: url("../img/sprite_section.png") -1833px -416px; }
+        background: url("../img/sprite_section.png") -1459px -429px; }
       @media (max-width: 398px) {
         .chigo_img .img {
           width: 100%;
@@ -553,7 +553,8 @@
     overflow: hidden;
     width: 673px;
     height: 183px;
-    background: url("../img/sprite_section.png") -1833px -183px; }
+    background: url("../img/sprite_section.png") -1118px 0px;
+    /**/ }
   .tcl_info_line {
     width: 100%; }
     .tcl_info_line .adres {
